--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 							<span class="fa fa-star"></span>
 							<span class="fa fa-star"></span>
 						</div>
-						<img class="round-img" src="images/zoro.jpg">
+						<img class="round-img" src="images/personal-trainer1.jpg">
 						<div class="card-body">
 							<h5 class="card-title">الاستاذ / راشد عبدالعزيز</h5>
 							<p class="card-text">دورة المدرب الشخصي المستوي الرابع المقدمة من الاكاديمية</p>
@@ -287,7 +287,7 @@
 							<span class="fa fa-star"></span>
 							<span class="fa fa-star"></span>
 						</div>
-						<img class="round-img" src="images/zoro.jpg">
+						<img class="round-img" src="images/personal-trainer2.jpg">
 						<div class="card-body">
 							<h5 class="card-title">الاستاذ / راشد عبدالعزيز</h5>
 							<p class="card-text">دورة المدرب الشخصي المستوي الرابع المقدمة من الاكاديمية</p>
@@ -318,7 +318,7 @@
 							<span class="fa fa-star"></span>
 							<span class="fa fa-star"></span>
 						</div>
-						<img class="round-img" src="images/zoro.jpg">
+						<img class="round-img" src="images/personal-trainer3.jpg">
 						<div class="card-body">
 							<h5 class="card-title">الاستاذ / راشد عبدالعزيز</h5>
 							<p class="card-text">دورة المدرب الشخصي المستوي الرابع المقدمة من الاكاديمية</p>
@@ -349,7 +349,7 @@
 							<span class="fa fa-star"></span>
 							<span class="fa fa-star"></span>
 						</div>
-						<img class="round-img" src="images/zoro.jpg">
+						<img class="round-img" src="images/personal-trainer4.jpg">
 						<div class="card-body">
 							<h5 class="card-title">الاستاذ / راشد عبدالعزيز</h5>
 							<p class="card-text">دورة المدرب الشخصي المستوي الرابع المقدمة من الاكاديمية</p>
@@ -382,7 +382,7 @@
 							<span class="fa fa-star"></span>
 							<span class="fa fa-star"></span>
 						</div>
-						<img class="round-img" src="images/zoro.jpg">
+						<img class="round-img" src="images/personal-trainer1.jpg">
 						<div class="card-body">
 							<h5 class="card-title">الاستاذ / راشد عبدالعزيز</h5>
 							<p class="card-text">دورة المدرب الشخصي المستوي الرابع المقدمة من الاكاديمية</p>
@@ -413,7 +413,7 @@
 							<span class="fa fa-star"></span>
 							<span class="fa fa-star"></span>
 						</div>
-						<img class="round-img" src="images/zoro.jpg">
+						<img class="round-img" src="images/personal-trainer2.jpg">
 						<div class="card-body">
 							<h5 class="card-title">الاستاذ / راشد عبدالعزيز</h5>
 							<p class="card-text">دورة المدرب الشخصي المستوي الرابع المقدمة من الاكاديمية</p>
@@ -444,7 +444,7 @@
 							<span class="fa fa-star"></span>
 							<span class="fa fa-star"></span>
 						</div>
-						<img class="round-img" src="images/zoro.jpg">
+						<img class="round-img" src="images/personal-trainer3.jpg">
 						<div class="card-body">
 							<h5 class="card-title">الاستاذ / راشد عبدالعزيز</h5>
 							<p class="card-text">دورة المدرب الشخصي المستوي الرابع المقدمة من الاكاديمية</p>
@@ -475,7 +475,7 @@
 							<span class="fa fa-star"></span>
 							<span class="fa fa-star"></span>
 						</div>
-						<img class="round-img" src="images/zoro.jpg">
+						<img class="round-img" src="images/personal-trainer4.jpg">
 						<div class="card-body">
 							<h5 class="card-title">الاستاذ / راشد عبدالعزيز</h5>
 							<p class="card-text">دورة المدرب الشخصي المستوي الرابع المقدمة من الاكاديمية</p>
